# newvulcan

./: CMakeLists.txt  LICENSE  compile.bat  main
libs/GLFW/include/GLFW/: glfw3.h.gch
shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: app.cpp  app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  nve_buffer.cpp  nve_buffer.hpp  nve_camera.cpp  nve_camera.hpp  nve_descriptors.cpp  nve_descriptors.hpp  nve_device.cpp  nve_device.hpp  nve_frame_info.hpp  nve_game_object.cpp  nve_game_object.hpp  nve_model.cpp  nve_model.hpp  nve_pipeline.cpp  nve_pipeline.hpp  nve_renderer.cpp  nve_renderer.hpp  nve_swap_chain.cpp  nve_swap_chain.hpp  nve_utils.hpp  nve_window.cpp  nve_window.hpp  simple_render_system.cpp  simple_render_system.hpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
